Bug 1946405 - Don't start nsGTKRemoteServer unless X11 server is present r=karlt

Differential Revision: https://phabricator.services.mozilla.com/D250580